kustomize/hello-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
